cambios responsive del hero y header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header>
     <h2>Rodrigo</h2>
-    <nav>
+    <nav class="navHeader">
         <a href="#">Home</a>
         <a href="#">Acerca de mí</a>
         <a href="#">Servicios</a>
@@ -19,7 +19,7 @@
         <a href="#">Contacto</a>
     </nav>
     <button class="botonContratame"></i>Contratame</button>
-   
+
    </header>
    <!--comienzo del hero/-->
    <main>
