cambios en el header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
    <header>
     <h2>Rodrigo</h2>
+    
     <nav class="navHeader">
         <a href="#">Home</a>
         <a href="#">Acerca de mí</a>
@@ -19,8 +20,11 @@
         <a href="#">Contacto</a>
     </nav>
     <button class="botonContratame"></i>Contratame</button>
-
+    <div class="hamburguesa">
+        <img class="logoHamburguesa" src="img/hamburguesa.png" alt="">
+    </div>
    </header>
+   
    <!--comienzo del hero/-->
    <main>
     <div class="figuras formas">
