cambios en las img en el hero y el header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             
         </div>
         </div>
-        <img class="imgHero" src="img/imagenUno.png" alt="">
+        <img class="imgHero" src="img/imagenUnoHero.png" alt="">
         <div class="contenedorRedesSociales">
             <p class="sigueme">Sigueme</p>
             <button class="botonRedesSociales"></button>
@@ -71,7 +71,7 @@
     <h1 class="mi">MI</h1>
     </div> 
     <button class="botonImgPaginaDos"></button>
-    <img class="imgPaginaDos" src="img/imgPaginaDos.jpg" alt="">
+    <img class="imgPaginaDos" src="img/imgSeccionDos.jpg" alt="">
     </div>
     <div class="divContenedor">
       <div class="divContenedorBio">    
