cambios en el hero y el header

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="contenedorRedesSociales">
             <p class="sigueme">Sigueme</p>
             <button class="botonRedesSociales"></button>
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-whatsapp"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a target="_blank" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp"></i></a>
+            <a target="_blank" href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
         </div>
         
     </section>
@@ -121,7 +121,7 @@
     <div class="divaSeccionSkill">
         <a href="#">UI/UX</a>
         <a href="#">Diseño Gráfico</a>
-        <a href="#">Languaje</a>
+        <a href="#">Lenguaje</a>
     </div>
     <div class="divAdobes">
         <div class="divAdobePhoto">
@@ -339,9 +339,9 @@
         <p class="diseñadorWeb">y Diseñador Web Principiante</p>
         </div>
         <div class="redesSocialesFooter">
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-twitter"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a target="_blank" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
+        <a target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
     <div>
