más cambios en el header y hero

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="contenedorRedesSociales">
             <p class="sigueme">Sigueme</p>
             <button class="botonRedesSociales"></button>
-            <a target="_blank" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
-            <a target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a target="_blank" href="https://www.facebook.com/rodrigo.montenegro.3597"><i class="bi bi-facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rodrigohmonte16/"><i class="bi bi-instagram"></i></a>
             <a target="_blank" href="https://web.whatsapp.com/"><i class="bi bi-whatsapp"></i></a>
-            <a target="_blank" href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
+            <a target="_blank" href="https://twitter.com/RodrigoHM16"><i class="bi bi-twitter"></i></a>
         </div>
         
     </section>
@@ -339,9 +339,9 @@
         <p class="diseñadorWeb">y Diseñador Web Principiante</p>
         </div>
         <div class="redesSocialesFooter">
-        <a target="_blank" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
-        <a target="_blank" href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
-        <a target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+        <a target="_blank" href="https://www.facebook.com/rodrigo.montenegro.3597"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://twitter.com/RodrigoHM16"><i class="bi bi-twitter"></i></a>
+        <a target="_blank" href="https://www.instagram.com/rodrigohmonte16/"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
     <div>
