cambios en el header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a href="#">Contacto</a>
     </nav>
     <button class="botonContratame"></i>Contratame</button>
-    <div class="hamburguesa">
-        <img class="logoHamburguesa" src="img/hamburguesa.png" alt="">
+    <div class="divHamburguesa">
+        <i class="bi bi-list"></i>
     </div>
    </header>
    
