cambios en el responsive de celu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#">Contacto</a>
     </nav>
     <button class="botonContratame"></i>Contratame</button>
-    <div class="divHamburguesa">
+    <div class="DivHamburguesa">
         <i class="bi bi-list"></i>
     </div>
    </header>
